src/static/css/almanac.css
/* ... */
.nav-dropdown-btn.dropdown-open {
  border-radius: 29px 29px 0 0;
  background-color: #5c687d;
  border-color: #f7f779;
  border-bottom-color: #5c687d;
  z-index: 2;
}

.footer .nav-dropdown-btn.dropdown-open {
  border-radius: 0 0 29px 29px;
  background-color: #5c687d;
  border-color: #f7f779;
  border-top-color: #5c687d;
  z-index: 2;
}

.nav-dropdown-btn:focus,
.nav-dropdown-btn:hover {
  color: #f7f779;
}

.nav-dropdown-btn:focus:not(:focus-visible) {
  outline: none;
}

.nav-dropdown-btn:focus-visible {
  outline: revert;
}

.nav-dropdown-btn::after,
.nav-dropdown-list-current::after {
  content: "";
  position: absolute;
  pointer-events: none;
  border-style: solid;
  border-width: 2px 2px 0 0;
  border-color: currentColor;
  height: 7px;
  width: 7px;
  top: 50%;
  margin-top: -7px;
  right: 23px;
  -webkit-transform: rotate(135deg);
  -ms-transform: rotate(135deg);
  transform: rotate(135deg);
  transition: all 200ms linear;
}

.nav-dropdown-btn.dropdown-open::after,
.nav-dropdown-list-current::after {
  width: 17px;
  right: 16px;
  margin-top: -9px;
}

.table-of-contents .nav-dropdown-btn.dropdown-open::after {
  height: 7px;
  width: 7px;
  margin-top: -2px;
  right: 23px;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.nav-dropdown-list-current {
  position: relative;
  color: #f7f779;
}

.nav-dropdown-list {
  background: #5c687d;
  border: 1px solid #f7f779;
  border-radius: 0 29px 29px;
  align-items: flex-start;
  flex-direction: column;
  user-select: none;
  font-size: 17px;
  font-size: 1.0625rem;
  color: #fff;
  position: absolute;
  z-index: 1;
  margin-top: -1px;
}

.footer .nav-dropdown-list {
  bottom: 60px;
  border-radius: 29px 29px 29px 0;
  flex-direction: column-reverse;
}

.nav-dropdown-list.align-right {
  right: 0;
  border-radius: 29px 0 29px 29px;
}

.footer .nav-dropdown-list.align-right {
  border-radius: 29px 29px 0 29px;
}

.nav-dropdown-list.align-center {
  border-radius: 0 0 29px 29px;
}

.footer .nav-dropdown-list.align-center {
  border-radius: 29px 29px 0 0;
}

.nav-dropdown-list li {
  width: 100%;
}

.nav-dropdown-list a {
  padding: 15px 45px 15px 20px;
  width: max-content;
  min-width: 100%;
}

.nav-dropdown-list-part {
  white-space: nowrap;
  padding: 16px 8px 8px 16px;
  font-weight: bold;
  font-size: 1.25rem;
}

.nav-dropdown-list-part a {
  padding: 0;
}

.header-list li:last-child {
  padding-bottom: 16px;
}

.footer-list li:last-child {
  padding-top: 16px;
}

.nav-dropdown-list-chapter a,
.nav-dropdown-list-chapter span {
  padding: 8px 8px 8px 24px;
}

.nav-dropdown-list-chapter small a,
.nav-dropdown-list-chapter a span {
  padding: 0;
}

.nav-dropdown-list-chapter.ebook {
  display: flex;
  flex-direction: column;
}

.nav-dropdown-list-todo,
.nav-dropdown-list-current {
  opacity: 0.5;
}

.nav-dropdown-list .help-translate {
  border-top: 1px dashed #bdbdbd;
  min-width: 10rem;
}

.footer .nav-dropdown-list .help-translate {
  border-bottom: 1px dashed #bdbdbd;
  border-top: none;
}

.footer .nav-dropdown-list-part {
  padding: 8px 8px 16px 16px;
}

/* Allow more wrapping for extremely small screens (e.g. very zoomed in) */
@media (max-width: 20em) {
  body {
    word-break: break-all;
    overflow-wrap: break-word;
  }

  .no-wrap {
    white-space: initial;
    word-break: break-all;
    overflow-wrap: break-word;
  }
}

@media (prefers-reduced-motion: reduce) {
  *,
  ::before,
  ::after {
    animation-delay: -1ms !important;
    animation-duration: 1ms !important;
    animation-iteration-count: 1 !important;
    background-attachment: initial !important;
    scroll-behavior: auto !important;
    transition-duration: 0s !important;
    transition-delay: 0s !important;
  }
}

.no-wrap {
  white-space: nowrap;
}

/* Syntax Highlighting */
pre {
  margin: 0;
  padding: 6px 10px;
  line-height: 19px;
  margin-bottom: 20px;
}

pre code,
td code,
th code {
  border: 0;
  padding: 0;
  margin: 0;
  border-radius: 0;
  background-color: transparent;
  background-color: unset;
}

code {
  font-size: 1rem;
  background-color: #f7f7f7;
  border: 1px solid #dadce0;
  padding: 1px 2px;
  word-break: break-all;
  overflow-wrap: break-word;
}

pre code {
  word-break: unset;
  overflow-wrap: unset;
}

pre .comment {
  color: #006400;
}

pre .support {
  color: #0086b3;
}

pre .tag,
pre .tag-name {
  color: #4a3244;
}

pre .keyword,
pre .css-property,
pre .vendor-fix,
pre .sass,
pre .class,
pre .id,
pre .css-value,
pre .entity.function,
pre .storage.function {
  font-weight: bold;
  color: #4a3244;
}

pre .css-property,
pre .css-value,
pre .vendor-fix,
pre .support.namespace {
  color: #333;
}

pre .function.call {
  color: navy;
}

pre .constant.numeric,
pre .keyword.unit,
pre .hex-color {
  font-weight: normal;
  color: #00f;
}

pre .entity.class {
  color: #458;
}

pre .entity.id,
pre .entity.function {
  color: #900;
}

pre .attribute,
pre .variable {
  color: #000;
}

pre .string,
pre .support.value {
  font-weight: normal;
  color: #b31107;
}

pre .regexp {
  color: #009926;
}

/*
 * Automatically adds language after an anchor if not same language
 *
 * Add for links that are obviously in English
*/
html:not([lang="en"]) main a[href*="/en-US/"]::after,
html:not([lang="en"]) main a[href*="/en/"]::after,
html:not([lang="en"]) main a[href^="https://en."]::after {
  content: '(en)';
  vertical-align: super;
  font-size: 0.6em;
}

/*
 * Add links if an explicit `hreflang` attribute exists
 */
main a[hreflang]::after {
  content: '(' attr(hreflang) ')';
  vertical-align: super;
  font-size: 0.6em;
}

/*
 * Remove it for English in English pages
 * (allows us to add this to base content to make it easier for translators)
 */
html[lang="en"] main a[hreflang="en"]::after {
  content: '';
}
/* ... */

